[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triagerl"
version = "0.1.0"
description = "OpenEnv medical triage benchmark with deterministic grading"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "gradio>=4.0.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "pydantic>=2.0.0",
  "openai>=1.0.0",
  "openenv-core",
  "python-dotenv",
  "httpx>=0.27.0",
  "structlog>=24.1.0",
  "redis>=5.0.0",
  "pyyaml>=6.0.1",
]

[project.scripts]
server = "triagerl.api.server:main"

[tool.setuptools.packages.find]
include = ["triagerl*"]